--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:fitsSystemWindows="true"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:fitsSystemWindows="true">
+<group android:checkableBehavior="single">
     <item
         android:id="@+id/south_park"
         android:icon="@drawable/ic_south_park"
@@ -19,4 +19,5 @@
         android:id="@+id/futurama"
         android:icon="@drawable/ic_futurama"
         android:title="Futurama" />
+</group>
 </menu>
